# users_feed_back

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
data/: Untitled  axial_coding.json  feedback_alerts.json  global_trends.json  user_feedback.json
scripts/: dashboard.py  extract_comment_verdict_data.py  fetch_traces.py  scratchpad.py  validate_themes.py
scripts/axial_coding/: __init__.py  classify.py  prompt.py  test_genai.py
